<resources>
    <string name="yes">Yes</string>
    <string name="app_name">Grubquest</string>
    <string name="empty_default">Hello\nYou are a fool</string>
    <string name="empty_loot_text">You don\'t have any loot right now!\n
        Head over to grubquest.gg to pick up some \n
        new quests or finish your current quests!</string>
    <string name="empty_quests_text">You haven\'t accepted any quests yet!\n
        Go to grubquest.gg to get started!</string>
    <string name="expired">EXPIRED</string>
    <string name="grubquest_logo">The Grubquest Logo</string>
    <string name="karmicdemon">KarmicDemon</string>
    <string name="invalid_user_pass">Invalid username/password combination.\nNeed an account? Tap the logo!</string>
    <string name="list_view_goes_here">List View Goes Here</string>
    <string name="login_error">Invalid username/password combination</string>
    <string name="loot">Loot</string>
    <string name="loot_notifications">Loot Notifications</string>
    <string name="nothing">Nothing to see here</string>
    <string name="quest">Quest</string>
    <string name="quest_fragment_apology">Quests to Come In Future Updates</string>
    <string name="quest_notifications">Quest Notifications</string>
    <string name="seperator">Seperator</string>
    <string name="shared_pref_file">com.grubquest.grubquest.data</string>
    <string name="username">Username</string>
    <string name="text_Login">Login</string>
    <string name="text_Username">Email</string>
    <string name="text_Password">Password</string>
    <string name="warning">Warning</string>

    <!-- strings for loot layout !-->
    <string name="cancel">Cancel</string>
    <string name="coupon_info_test">Testing loot info! ASDF ASDF ASDF ASDF ASDF ASDF \nWow!</string>
    <string name="expires_in">Expires in:</string>
    <string name="expire_warning">Coupons will disappear 15 minutes after you hit claim!</string>
    <string name="test_offer">Test_Offer</string>
    <string name="test_rest">Test_Restaurant</string>
    <string name="test_time">00:00:00</string>
    <string name="test_OFF">$test OFF</string>
    <string name="view_reward">View Reward</string>

    <string name="turn_location">Please enable location services!</string>
    <string name="how_location">To do this, go to your device\nSettings -> Location</string>
    <string name="location_try_again">Try Again</string>
    <string name="location_toggle">Location Confirmation</string>

    <string name="delete_confirm">Delete this item from your account?</string>

    <string name="loot_expire_soon">Loot expiring soon!</string>

    <!--strings for quest layout-->
    <string name="wins">STAT</string>
    <string name="close">Close</string>
    <string name="quest_expire_soon">Quest expiring soon!</string>
    <string name="new_quests">New quests available at grubquest.gg!</string>
    <!--arrays-->
    <string-array name="nav_array">
        <item>Website</item>
        <item>Like Us!</item>
        <item>Feedback</item>
        <item>Settings</item>
        <item>Log Out</item>
    </string-array>

    <array name="nav_icons">
        <item>@drawable/web_icon</item>
        <item>@drawable/ic_facebook</item>
        <item>@android:drawable/ic_dialog_email</item>
        <item>@drawable/ic_settings_white_24dp</item>
        <item>@drawable/logout_icon</item>
    </array>
</resources>
