<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:padding="0dp"
    android:orientation="vertical"
    android:id="@+id/coupon_layout">
    
    <ImageButton
        android:padding="0dp"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="#000000"
        android:id="@+id/restaurant_image" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/themeRed"
            android:weightSum="2"
            android:id="@+id/offertext_layout"
            android:layout_gravity="center_vertical">

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:id="@+id/rest_offer_layout"
                android:padding="5dp"
                android:paddingStart="10dp"
                android:layout_margin="0dp"
                android:layout_gravity="right">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_rest"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:id="@+id/restaurant_textview"
                    android:layout_alignParentTop="false" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:text="@string/test_offer"
                    android:id="@+id/offer_textview" />
            </RelativeLayout>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textColor="#FFFFFF"
                android:text="@string/test_OFF"
                android:textSize="24sp"
                android:textAlignment="center"
                android:layout_weight="1"
                android:id="@+id/off_textview"
                android:layout_gravity="center_vertical" />

        </LinearLayout>
    <RelativeLayout
        android:id="@+id/expires_layout"
        android:layout_width="match_parent"
        android:layout_height="60dp">
        
        <ImageView
            android:id="@+id/type_icon_image"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="15dp"
            android:src="@drawable/solo_filled"
            android:scaleType="fitCenter"
            />
        <TextView
            android:id="@+id/expires_textview"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#000000"
            android:textStyle="bold"
            android:textSize="16sp"
            android:text="@string/expires_in"
            android:layout_toStartOf="@+id/time_remain_textview"
            android:layout_marginEnd="10dp"/>
        <TextView
            android:id="@+id/time_remain_textview"
            android:layout_centerVertical="true"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:layout_width="125dp"
            android:layout_height="20dp"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:text="@string/test_time"
            android:background="@drawable/round_black_10"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical|center_horizontal" />


    </RelativeLayout>
    <ImageView
        android:id="@+id/separator_image"
        android:layout_width="match_parent"
        android:paddingStart="10dp"
        android:paddingEnd="10dp"
        android:layout_height="1dp"
        android:src="#888888" />
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:weightSum="1"
        android:padding="10dp"
        android:gravity="center_vertical">
        <Button
            android:id="@+id/view_reward_button"
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:text="@string/view_reward"
            android:textAllCaps="false"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.67"
            android:background="@drawable/round_red_5"/>
        <View
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.03" />
        <Button
            android:textSize="16sp"
            android:textColor="#FFFFFF"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:id="@+id/cancel_button"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="0.3"
            android:background="@drawable/round_red_5"/>
        
    </LinearLayout>
</LinearLayout>