<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="300dp"
    android:layout_height="400dp"
    android:background="@android:color/white">
    <ImageView
        android:clickable="true"
        android:id="@+id/close_icon"
        android:layout_width="20dp"
        android:layout_height="20dp"
        android:src="@drawable/close"
        android:layout_alignParentEnd="true"
        android:layout_margin="10dp"/>
    <ImageView
        android:id="@+id/popup_image"
        android:layout_width="160dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:src="@drawable/location_permission_illustration"
        />
    <TextView
        android:layout_marginTop="20dp"
        android:id="@+id/bold_textview"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/themeRed"
        android:textSize="16sp"
        android:textStyle="bold"
        android:layout_below="@+id/popup_image"
        android:layout_centerHorizontal="true"
        android:text="@string/turn_location"/>
    <TextView
        android:layout_marginTop="15dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/bold_textview"
        android:layout_width="200dp"
        android:gravity="center_horizontal"
        android:layout_height="wrap_content"
        android:textColor="@color/grayDark"
        android:textSize="12sp"
        android:fontFamily="robotoThin"
        android:text="@string/how_location"
        android:singleLine="false"/>
    <Button
        android:layout_width="250dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="25dp"
        android:background="@drawable/red_round_pressable"
        android:text="@string/location_try_again"
        android:textColor="@color/white"
        android:textSize="16sp"/>

</RelativeLayout>