<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/popup_layout"
    android:background="#80FFFFFF">
    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        android:background="@color/white"
        >
        <TextView
            android:id="@+id/delete_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/delete_confirm"
            android:textColor="@color/themeRed"
            android:textSize="16sp"
            android:textStyle="bold"
            android:layout_marginBottom="10dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/delete_text"
            android:layout_marginTop="10dp"
            android:weightSum="1"
            android:gravity="center">
            <Button
                android:id="@+id/yes_delete_button"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_marginEnd="10dp"
                android:layout_height="40dp"
                android:background="@drawable/red_rounded_pressable"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:text="@string/yes"
                />
            <Button
                android:id="@+id/cancel_delete_button"
                android:layout_width="0dp"
                android:layout_weight="0.4"
                android:layout_height="40dp"
                android:background="@drawable/red_rounded_pressable"
                android:textSize="16sp"
                android:textColor="@color/white"
                android:text="@string/cancel"
                />
        </LinearLayout>

    </RelativeLayout>

</RelativeLayout>