<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.grubquest.grubquest_android.LoginActivity"
    android:background="@color/themePink"
    android:padding="25dp"
    android:id="@+id/lytMain">

    <RelativeLayout
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:id="@+id/lytBackdrop"
        android:background="@color/themeRed"
        android:layout_centerInParent="true"
        >

        <Button
            android:textAllCaps="false"
            android:layout_width="170dp"
            android:layout_height="42dp"
            android:padding="0dp"
            android:textSize="13sp"
            android:text="@string/text_Login"
            android:fontFamily="roboto_thin"
            android:id="@+id/login_button"
            android:background="@drawable/border_box"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="35dp"
            />
        <ImageView
            android:id="@+id/logo"
            android:layout_width="240dp"
            android:layout_height="50dp"
            android:src="@drawable/logotype"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="#FFFFFF"
        android:paddingLeft="7dp"
        android:paddingRight="7dp">
        <EditText
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:id="@+id/username_edittext"
            android:layout_centerHorizontal="true"
            android:textColorHint="#888888"
            android:hint="@string/text_Username"
            android:fontFamily="android:roboto_thin"
            android:layout_marginTop="1.5dp"
            />

        <EditText
            android:layout_width="230dp"
            android:layout_height="40dp"
            android:inputType="textPassword"
            android:layout_marginTop="1.5dp"
            android:id="@+id/password_edittext"
            android:layout_below="@+id/username_edittext"
            android:layout_centerHorizontal="true"
            android:hint="@string/text_Password"
            android:fontFamily="android:roboto_thin"
            android:textColorHint="#888888"/>
        <ImageView
            android:layout_width="220dp"
            android:layout_height="1dp"
            android:background="@color/themeRed"
            android:layout_centerInParent="true"
            android:id="@+id/separator_image" />
    </RelativeLayout>

</RelativeLayout>
