<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="wrap_content"
    android:layout_marginTop="7dp"
    android:layout_marginLeft="7dp"
    android:layout_marginRight="7dp"
    android:orientation="vertical"
    android:id="@+id/quest_layout">
    
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="70dp"
        android:clickable="true"
        android:id="@+id/quest_top_layout">
        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@color/darkGray"
            android:scaleType="centerCrop"
            android:tint="@color/grayMask"
            android:id="@+id/questName" />
        <LinearLayout
            android:layout_width="match_parent"
            android:background="@android:color/transparent"
            android:layout_height="70dp"
            android:paddingStart="10dp"
            android:paddingEnd="7dp"
            android:id="@+id/quest_image_layout"
            android:layout_gravity="center_vertical"
            android:baselineAligned="true"
            >
            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:id="@+id/restaurantIcon"
                android:padding="0dp"
                android:src="@android:color/white"
                android:layout_gravity="center_vertical" />

            <RelativeLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:id="@+id/rest_offer_layout"
                android:padding="5dp"
                android:clickable="true"
                android:paddingStart="10dp"
                android:layout_margin="0dp"
                android:layout_gravity="right"
                android:focusable="true"
                android:contextClickable="true"
                android:focusableInTouchMode="true">

                <TextView
                    android:id="@id/time_remain_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="14sp"
                    android:text="@string/test_time"
                    android:textColor="@android:color/white"
                    android:layout_alignParentEnd="true"
                    android:layout_alignBottom="@+id/title"
                    android:clickable="false" />
                <ImageView
                    android:id="@id/isDelivery"
                    android:layout_alignBottom="@id/restaurantName"
                    android:layout_alignParentEnd="true"
                    android:layout_height="15dp"
                    android:layout_marginBottom="2dp"
                    android:layout_width="15dp"
                    android:src="@drawable/warning_icon" />
                <ImageView
                    android:id="@id/partySize"
                    android:layout_alignBottom="@id/isDelivery"
                    android:layout_height="15dp"
                    android:layout_marginEnd="5dp"
                    android:layout_toStartOf="@id/isDelivery"
                    android:layout_width="15dp"
                    android:src="@drawable/warning_icon" />
                <TextView
                    android:singleLine="true"
                    android:clickable="false"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/test_rest"
                    android:textColor="@android:color/white"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:id="@+id/restaurantName"
                    android:layout_alignParentTop="false"
                    android:layout_marginTop="10dp"
                    android:layout_toLeftOf="@id/partySize"
                    android:layout_alignParentStart="true"
                    android:layout_marginRight="10dp"
                    android:focusable="false"
                    android:textIsSelectable="false" />
                <TextView
                    android:singleLine="true"
                    android:clickable="true"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="false"
                    android:textColor="@android:color/white"
                    android:textSize="14sp"
                    android:text="@string/test_offer"
                    android:id="@+id/title"
                    android:layout_below="@+id/restaurantName"
                    android:layout_marginTop="5dp"
                    android:layout_toLeftOf="@id/time_remain_textview"
                    android:layout_alignParentStart="true"
                    android:layout_marginRight="10dp"
                    android:textIsSelectable="false"
                    android:focusable="false" />


            </RelativeLayout>

        </LinearLayout>
    </RelativeLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/description"
        android:textColor="@color/white"
        android:background="@color/graySideBar"
        android:textSize="14sp"
        android:text="@string/coupon_info_test"
        android:singleLine="false"
        android:textAlignment="center"
        android:theme="@style/AppTheme"
        android:paddingLeft="20dp"
        android:paddingTop="20dp"
        android:paddingRight="20dp"
        android:paddingBottom="12.5dp" />
    <RelativeLayout
        android:id="@+id/quest_bottom_layout"
        android:layout_width="fill_parent"
        android:layout_height="40dp"
        android:background="@color/graySideBar"
        android:clickable="true"
        android:paddingStart="5dp"
        android:paddingEnd="5dp">
        <ImageView
            android:layout_width="35dp"
            android:layout_height="25dp"
            android:src="@drawable/closed_chest"
            android:id="@+id/chest_icon"
            android:layout_alignParentEnd="true"
            android:background="@drawable/red_round_pressable"
            android:clickable="true"
            android:scaleType="fitCenter"
            android:layout_centerVertical="true"
            android:padding="2dp" />
        <ListView
            android:clickable="true"
            android:id="@+id/progress_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_toStartOf="@id/chest_icon">

        </ListView>

    </RelativeLayout>
</LinearLayout>